tester/src/test/aya/failure/issue300.aya.txt
In file $FILE:6:35 ->

  4 |   | (zero, b), unit x => b
  5 |   | (a, zero), y => a
  6 |   | (suc a, suc b), unit y => suc (max (a, b))
                                         ^--------^
  
Error: The expected type `Nat` does not match the actual type `Pi (b : Unit) -> Nat`
Tycking interrupted due to error(s).
What are you doing?
